// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat should render a bar chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      BarStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a key metrics chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      KeyMetricStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a line chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      LineStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a per hour per week table 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      PerHourPerWeekTableStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a table chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      TableStat
    </div>
  </div>
</div>
`;
